[package]
name = "dunk2"
version = "0.1.0"
authors = ["mori5321 <moriwm77@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serde = "1.0.126"
serde_json = "1.0.59"
serde_dhall = "0.10.1"
ureq = { version = "*", features = ["json"] }
